8225079: [lworld] newInstance wrong return type Internal Error

Specify T_VALUETYPE, not T_OBJECT as factory method return type

Reviewed-by: mchung